service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-cloud-service
spec:
  selector:
    app: service-cloud
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort # Change the service type to NodePort
