ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tp-cloud.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-cloud-service
            port:
              number: 3000
